# ConsoleEngine

./: CMakeLists.txt  README.md  main.cpp
TestSrc/: FileReader.cpp
editorSrc/: main.cpp
include/: Camera.h  commons.h  initialiser.h  input.h  main.h  math.h  rasterizer.h  renderer.h  scene.h  screenspace.h  util.h  viewspace.h  window.h  worldspace.h
include/glad/: glad.h
main_src/: main.cpp
old_src/: old.cpp  oldGl.cpp
src/: Camera.cpp  glad.c  initialiser.cpp  input.cpp  main.cpp  math.cpp  rasterizer.cpp  renderer.cpp  scene.cpp  screenspace.cpp  util.cpp  viewspace.cpp  window.cpp  worldspace.cpp
test_src/: testMain.cpp
